Fix widgets alignment

--- a/css/sp123-omega.styles.css
+++ b/css/sp123-omega.styles.css
@@ -184,6 +184,10 @@ label {
 .blog-type-page .views-exposed-form .views-exposed-widget {
   display: inline-block;
   float: none; }
+  .blog-type-page .views-exposed-form .views-exposed-widget .form-item input, .blog-type-page .views-exposed-form .views-exposed-widget .form-item select {
+    max-width: 100%; }
+  .blog-type-page .views-exposed-form .views-exposed-widget .form-submit {
+    margin-top: 0; }
 .blog-type-page #main-content .panel-myriad-layout {
   display: -webkit-box;
   display: -ms-flexbox;
