--- a/sass/components/_blog_pages.scss
+++ b/sass/components/_blog_pages.scss
@@ -10,6 +10,16 @@
 		.views-exposed-widget {
 			display: inline-block;
 			float: none;
+
+			.form-item {
+				input, select {
+					max-width: 100%;
+				}
+			}
+
+			.form-submit {
+				margin-top: 0;
+			}
 		}
 	}
 	
